docs: add documentation to update
