# handler/updateOpening.go
@@ -10,14 +10,16 @@ import (
 // @BasePath /api/v1/
 
 // @Summary Update opening
-// @Description update a job opening
+// @Description Update a job opening
 // @Tags Openings
 // @Accept json
 // @Produce json
-// @Param request body UpdateOpeningRequest true "Request body"
+// @Param id query string true "Opening ID"
+// @Param opening body UpdateOpeningRequest true "Opening data to update"
 // @Success 200 {object} UpdateOpeningResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
 // @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
